--- a/index.html
+++ b/index.html
@@ -74,7 +74,18 @@
             <p class="footer__author">© 2022 Mesto Russia</p>
         </footer>
     </div>
-    <script scr="index.js"></script>
+    <div class="popup">
+        <div class="popup__container">
+            <button class="popup__close-button"></button>
+            <section class="popup__content">
+                <h3 class="popup__title">Редактировать профиль</h3>
+                <input type="text" class="popup__field"value="Жак-Ив Кусто">
+                <input type="text" class="popup__field" value="Исследователь океана">
+            </section>
+            <button class="popup__submit-button"><span class="popup__text-button">Сохранить</span></button>
+        </div>
+    </div>
+    <script src="index.js"></script>
 </body>
 
 </html>
