форма отправки готова

--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
             <button class="popup__close-button"></button>
             <section class="popup__content">
                 <h3 class="popup__title">Редактировать профиль</h3>
-                <input type="text" class="popup__field"value="Жак-Ив Кусто">
-                <input type="text" class="popup__field" value="Исследователь океана">
+                <input type="text" class="popup__field popup__field_name"value="Жак-Ив Кусто">
+                <input type="text" class="popup__field popup__field_job" value="Исследователь океана">
             </section>
             <button class="popup__submit-button"><span class="popup__text-button">Сохранить</span></button>
         </div>
