создана файловая структура

--- a/index.html
+++ b/index.html
@@ -29,42 +29,42 @@
                 <div class="element">
                     <img src="./Images/element__karachaevsk.png" class="element__img" alt="картинка">
                     <div class="element__item">
-                        <h2 class="element_title">Карачаевск</h2>
+                        <h2 class="element__title">Карачаевск</h2>
                         <button class="element__button"></button>
                     </div>
                 </div>
                 <div class="element">
                     <img src="./Images/element__Elbrus.png" class="element__img" alt="картинка">
                     <div class="element__item">
-                        <h2 class="element_title">Гора Эльбрус</h2>
+                        <h2 class="element__title">Гора Эльбрус</h2>
                         <button class="element__button"></button>
                     </div>
                 </div>
                 <div class="element">
                     <img src="./Images/element__Dombai.png" class="element__img" alt="картинка">
                     <div class="element__item">
-                        <h2 class="element_title">Домбай</h2>
+                        <h2 class="element__title">Домбай</h2>
                         <button class="element__button"></button>
                     </div>
                 </div>
                 <div class="element">
                     <img src="./Images/element__Elbrus.png" class="element__img" alt="картинка">
                     <div class="element__item">
-                        <h2 class="element_title">Гора Эльбрус</h2>
+                        <h2 class="element__title">Гора Эльбрус</h2>
                         <button class="element__button"></button>
                     </div>
                 </div>
                 <div class="element">
                     <img src="./Images/element__Dombai.png" class="element__img" alt="картинка">
                     <div class="element__item">
-                        <h2 class="element_title">Домбай</h2>
+                        <h2 class="element__title">Домбай</h2>
                         <button class="element__button"></button>
                     </div>
                 </div>
                 <div class="element">
                     <img src="./Images/element__karachaevsk.png" class="element__img" alt="картинка">
                     <div class="element__item">
-                        <h2 class="element_title">Карачаево-черкесия</h2>
+                        <h2 class="element__title">Карачаево-черкесия</h2>
                         <button class="element__button"></button>
                     </div>
                 </div>
