--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         </header>
         <main class="main">
             <section class="profile">
-                <img src="./Images/profile__avatar.svg">
+                <div class="profile__image"></div>
                 <div class="profile__info">
                     <h1 class="profile__title">Жак-Ив Кусто</h1>
-                    <p class="profile__paragraph">Исследователь океана</p>
                     <button class="profile__edit-button"></button>
+                    <p class="profile__paragraph">Исследователь океана</p>
                 </div>
                 <button class="profile__add-button"></button>
             </section>
@@ -83,7 +83,7 @@
                 <input type="text" class="popup__field popup__field_job" value="Исследователь океана">
             </section>
             <button class="popup__submit-button"><span class="popup__text-button">Сохранить</span></button>
-        </div>
+        </div> 
     </div>
     <script src="index.js"></script>
 </body>
