--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Проект Место</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="./pages/index.css">
 </head>
 <body class="body">
     <div class="page">
@@ -83,6 +83,6 @@
             <button class="popup__submit-button"><span class="popup__text-button">Сохранить</span></button>
         </div>
     </div>
-    <script src="index.js"></script>
+    <script src="./pages/index.js"></script>
 </body>
 </html>
