--- a/index.html
+++ b/index.html
@@ -1,88 +1,127 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Проект Место</title>
-    <link rel="stylesheet" href="./pages/index.css">
-</head>
-<body class="body">
+    <link rel="stylesheet" href="./pages/index.css" />
+  </head>
+
+  <body class="body">
     <div class="page">
-        <header class="header">
-            <a href="index.html" class="header__link"><img src="./Images/header__logo.svg" alt="логотип"
-                    class="header__logo"></a>
-        </header>
-        <main class="main">
-            <section class="profile">
-                <div class="profile__image"></div>
-                <div class="profile__info">
-                    <h1 class="profile__title">Жак-Ив Кусто</h1>
-                    <button class="profile__edit-button"></button>
-                    <p class="profile__paragraph">Исследователь океана</p>
-                </div>
-                <button class="profile__add-button"></button>
-            </section>
-            <section class="elements">
-                <div class="element">
-                    <img src="./Images/element__karachaevsk.png" class="element__img" alt="картинка">
-                    <div class="element__item">
-                        <h2 class="element__title">Карачаевск</h2>
-                        <button class="element__button"></button>
-                    </div>
-                </div>
-                <div class="element">
-                    <img src="./Images/element__Elbrus.png" class="element__img" alt="картинка">
-                    <div class="element__item">
-                        <h2 class="element__title">Гора Эльбрус</h2>
-                        <button class="element__button"></button>
-                    </div>
-                </div>
-                <div class="element">
-                    <img src="./Images/element__Dombai.png" class="element__img" alt="картинка">
-                    <div class="element__item">
-                        <h2 class="element__title">Домбай</h2>
-                        <button class="element__button"></button>
-                    </div>
-                </div>
-                <div class="element">
-                    <img src="./Images/element__Elbrus.png" class="element__img" alt="картинка">
-                    <div class="element__item">
-                        <h2 class="element__title">Гора Эльбрус</h2>
-                        <button class="element__button"></button>
-                    </div>
-                </div>
-                <div class="element">
-                    <img src="./Images/element__Dombai.png" class="element__img" alt="картинка">
-                    <div class="element__item">
-                        <h2 class="element__title">Домбай</h2>
-                        <button class="element__button"></button>
-                    </div>
-                </div>
-                <div class="element">
-                    <img src="./Images/element__karachaevsk.png" class="element__img" alt="картинка">
-                    <div class="element__item">
-                        <h2 class="element__title">Карачаево-черкесия</h2>
-                        <button class="element__button"></button>
-                    </div>
-                </div>
-            </section>
-        </main>
-        <footer class="footer">
-            <p class="footer__author">© 2022 Mesto Russia</p>
-        </footer>
+      <header class="header">
+        <a href="index.html" class="header__link"
+          ><img
+            src="./images/header__logo.svg"
+            alt="логотип"
+            class="header__logo"
+        /></a>
+      </header>
+      <main class="main">
+        <section class="profile">
+          <img src="./images/profile__avatar.svg" class="profile__image" />
+          <div class="profile__info">
+            <h1 class="profile__title">Жак-Ив Кусто</h1>
+            <button class="profile__edit-button"></button>
+            <p class="profile__paragraph">Исследователь океана</p>
+          </div>
+          <button class="profile__add-button"></button>
+        </section>
+        <section class="elements">
+          <div class="element">
+            <img
+              src="./Images/element__karachaevsk.png"
+              class="element__img"
+              alt="картинка"
+            />
+            <div class="element__item">
+              <h2 class="element__title">Карачаевск</h2>
+              <button class="element__button"></button>
+            </div>
+          </div>
+          <div class="element">
+            <img
+              src="./Images/element__Elbrus.png"
+              class="element__img"
+              alt="картинка"
+            />
+            <div class="element__item">
+              <h2 class="element__title">Гора Эльбрус</h2>
+              <button class="element__button"></button>
+            </div>
+          </div>
+          <div class="element">
+            <img
+              src="./Images/element__Dombai.png"
+              class="element__img"
+              alt="картинка"
+            />
+            <div class="element__item">
+              <h2 class="element__title">Домбай</h2>
+              <button class="element__button"></button>
+            </div>
+          </div>
+          <div class="element">
+            <img
+              src="./Images/element__Elbrus.png"
+              class="element__img"
+              alt="картинка"
+            />
+            <div class="element__item">
+              <h2 class="element__title">Гора Эльбрус</h2>
+              <button class="element__button"></button>
+            </div>
+          </div>
+          <div class="element">
+            <img
+              src="./Images/element__Dombai.png"
+              class="element__img"
+              alt="картинка"
+            />
+            <div class="element__item">
+              <h2 class="element__title">Домбай</h2>
+              <button class="element__button"></button>
+            </div>
+          </div>
+          <div class="element">
+            <img
+              src="./Images/element__karachaevsk.png"
+              class="element__img"
+              alt="картинка"
+            />
+            <div class="element__item">
+              <h2 class="element__title">Карачаево-черкесия</h2>
+              <button class="element__button"></button>
+            </div>
+          </div>
+        </section>
+      </main>
+      <footer class="footer">
+        <p class="footer__author">© 2022 Mesto Russia</p>
+      </footer>
     </div>
     <div class="popup">
-        <div class="popup__container">
-            <button class="popup__close-button"></button>
-            <section class="popup__content">
-                <h3 class="popup__title">Редактировать профиль</h3>
-                <input type="text" class="popup__field popup__field_name" value="Жак-Ив Кусто">
-                <input type="text" class="popup__field popup__field_job" value="Исследователь океана">
-            </section>
-            <button class="popup__submit-button"><span class="popup__text-button">Сохранить</span></button>
-        </div>
+      <div class="popup__container">
+        <button class="popup__close-button"></button>
+        <section class="popup__content">
+          <h3 class="popup__title">Редактировать профиль</h3>
+          <input
+            type="text"
+            class="popup__field popup__field_name"
+            value="Жак-Ив Кусто"
+          />
+          <input
+            type="text"
+            class="popup__field popup__field_job"
+            value="Исследователь океана"
+          />
+        </section>
+        <button class="popup__submit-button">
+          <span class="popup__text-button">Сохранить</span>
+        </button>
+      </div>
     </div>
-    <script src="./pages/index.js"></script>
-</body>
+    <script src="./scripts/index.js"></script>
+  </body>
 </html>
