Исправлены недочеты после ревью

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         <a href="index.html" class="header__link"
           ><img
             src="./images/header__logo.svg"
-            alt="логотип"
+            alt="логотип проекта Место"
             class="header__logo"
         /></a>
       </header>
       <main class="main">
         <section class="profile">
-          <img src="./images/profile__avatar.svg" class="profile__image" />
+          <img src="./images/profile__avatar.svg" class="profile__image" alt="Аватар профиля"/>
           <div class="profile__info">
             <h1 class="profile__title">Жак-Ив Кусто</h1>
             <button class="profile__edit-button"></button>
@@ -33,7 +33,7 @@
             <img
               src="./Images/element__karachaevsk.png"
               class="element__img"
-              alt="картинка"
+              alt="Карачаевск"
             />
             <div class="element__item">
               <h2 class="element__title">Карачаевск</h2>
@@ -44,7 +44,7 @@
             <img
               src="./Images/element__Elbrus.png"
               class="element__img"
-              alt="картинка"
+              alt="Гора Эльбрус"
             />
             <div class="element__item">
               <h2 class="element__title">Гора Эльбрус</h2>
@@ -55,7 +55,7 @@
             <img
               src="./Images/element__Dombai.png"
               class="element__img"
-              alt="картинка"
+              alt="Домбай"
             />
             <div class="element__item">
               <h2 class="element__title">Домбай</h2>
@@ -66,7 +66,7 @@
             <img
               src="./Images/element__Elbrus.png"
               class="element__img"
-              alt="картинка"
+              alt="Гора Эльбрус"
             />
             <div class="element__item">
               <h2 class="element__title">Гора Эльбрус</h2>
@@ -77,7 +77,7 @@
             <img
               src="./Images/element__Dombai.png"
               class="element__img"
-              alt="картинка"
+              alt="Домбай"
             />
             <div class="element__item">
               <h2 class="element__title">Домбай</h2>
@@ -88,7 +88,7 @@
             <img
               src="./Images/element__karachaevsk.png"
               class="element__img"
-              alt="картинка"
+              alt="Карачаево-черкесия"
             />
             <div class="element__item">
               <h2 class="element__title">Карачаево-черкесия</h2>
