--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <p class="footer__author">© 2022 Mesto Russia</p>
     </footer>
   </div>
-  <div class="popup popup__edit-info">
+  <div class="popup popup__edit_info">
     <div class="popup__container">
       <button class="popup__close-button"></button>
       <section class="popup__content">
@@ -45,7 +45,7 @@
       </button>
     </div>
   </div>
-  <div class="popup popup__add-item">
+  <div class="popup popup__add_item">
     <div class="popup__container">
       <button class="popup__close-button popup__close-button_add"></button>
       <section class="popup__content">
@@ -60,7 +60,7 @@
       </button>
     </div>
   </div>
-  <div class="popup popup__image-scale">
+  <div class="popup popup__image_scale">
     <div class="popup__container popup__container_image">
       <button class="popup__close-button popup__close-button-image"></button>
       <section class="popup__content">
