--- a/index.html
+++ b/index.html
@@ -37,12 +37,14 @@
       <button class="popup__close-button"></button>
       <section class="popup__content">
         <h3 class="popup__title">Редактировать профиль</h3>
+        <form class="popup__form popup__form_info_edit">
         <input type="text" class="popup__field popup__field_name" value="Жак-Ив Кусто" />
         <input type="text" class="popup__field popup__field_job" value="Исследователь океана" />
       </section>
       <button class="popup__submit-button">
         <span class="popup__text-button">Сохранить</span>
       </button>
+      </form>
     </div>
   </div>
   <div class="popup popup_add-item">
@@ -50,14 +52,17 @@
       <button class="popup__close-button popup__close-button_add"></button>
       <section class="popup__content">
         <h3 class="popup__title">Новое место</h3>
+        <form class="popup__form popup__form_add-image">
         <input type="text" name="imageTitle" class="popup__field popup__field_title-image" placeholder="Название"
           value="" />
         <input type="text" name="imageLink" class="popup__field popup__field_image" placeholder="Ссылка на картинку"
           value="" />
+        
       </section>
       <button class="popup__submit-button popup__submit-button_add">
         <span class="popup__text-button">Создать</span>
       </button>
+    </form>
     </div>
   </div>
   <div class="popup popup_image-scale">
