--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
       <section class="popup__content">
         <h3 class="popup__title">Редактировать профиль</h3>
     <form class="popup__form popup__form_info_edit" id="editForm" novalidate>
-          <input type="text" class="popup__field popup__field_name" id="name" value="Жак-Ив Кусто" minlength="2" maxlength="40" required/>
-          <span class="popup__span-fieldName popup__span-error" id="name-error"></span>
-          <input type="text" class="popup__field popup__field_job" id="job" value="Исследователь океана" minlength="2" maxlength="200" required/>
-          <span class="popup__span-fieldJob popup__span-error" id="job-error"></span>
+          <input type="text" class="popup__field popup__field_name" id="name"  minlength="2" maxlength="40" required/>
+          <span class="name-error popup__field-error" id="name-error"></span>
+          <input type="text" class="popup__field popup__field_job" id="job" minlength="2" maxlength="200" required/>
+          <span class="job-error popup__field-error" id="job-error"></span>
       <button class="popup__submit-button popup__submit-button_edit" >
         <span class="popup__text-button">Сохранить</span>
       </button>
@@ -59,10 +59,10 @@
         <form class="popup__form popup__form_add-image" id="addForm" novalidate>
           <input type="text" name="imageTitle" class="popup__field popup__field_title-image" id="title" placeholder="Название"
             value="" minlength="2" maxlength="30" required/>
-            <span class="popup__span-imageTitle popup__span-error" id="title-error"></span>
+            <span class="title-error popup__field-error"></span>
           <input type="url" name="imageLink" class="popup__field popup__field_image" id="url" placeholder="Ссылка на картинку"
             value="" required/>
-            <span class="popup__span-imageLink popup__span-error" id="url-error"></span>
+            <span class="url-error popup__field-error" id="url-error"></span>
       <button class="popup__submit-button popup__submit-button_add" >
         <span class="popup__text-button">Создать</span>
       </button>
@@ -91,7 +91,8 @@
     </div>
   </template>
   <script src="./scripts/index.js"></script>
-  <script src="./scripts/validate.js"></script>
+  <!-- <script src="./scripts/validate.js"></script> -->
+  <script src="./scripts/beta.js"></script>
 </body>
 
 </html>
