--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       </div>
     </div>
   </template>
-  <script src="./scripts/beta.js"></script>
+  <script src="./scripts/validate.js"></script>
   <script src="./scripts/index.js"></script>
   <!-- <script src="./scripts/validate.js"></script> -->
 </body>
