--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   </div>
   <template id="template">
     <div class="element">
-      <img class="element__img" alt="изображдение" />
+      <img class="element__img" alt="изображение" />
       <div class="element__item">
         <h2 class="element__title"></h2>
         <button class="element__button"></button>
@@ -90,8 +90,8 @@
       </div>
     </div>
   </template>
-  <script src="./scripts/validate.js"></script>
-  <script src="./scripts/index.js"></script>
+  <script type="module" src="./scripts/index.js"></script>
+    <script type="module" src="./scripts/Card.js"></script>
+    <script type="module" src="./scripts/FormValidator.js"></script>
 </body>
-
 </html>
