--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </div>
   </template>
   <script type="module" src="./scripts/index.js"></script>
-    <script type="module" src="./scripts/Card.js"></script>
-    <script type="module" src="./scripts/FormValidator.js"></script>
+    <script src="./scripts/Card.js"></script>
+    <script src="./scripts/FormValidator.js"></script>
 </body>
 </html>
