--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         <h3 class="popup__title">Редактировать профиль</h3>
     <form class="popup__form popup__form_info_edit" id="editForm" novalidate>
           <input type="text" class="popup__field popup__field_name" id="name"  minlength="2" maxlength="40" required/>
-          <span class="name-error popup__field-error" id="name-error"></span>
+          <span class="name-error popup__field-error span-error" id="name-error"></span>
           <input type="text" class="popup__field popup__field_job" id="job" minlength="2" maxlength="200" required/>
-          <span class="job-error popup__field-error" id="job-error"></span>
+          <span class="job-error popup__field-error span-error" id="job-error"></span>
       <button class="popup__submit-button popup__submit-button_edit" >
         <span class="popup__text-button">Сохранить</span>
       </button>
@@ -76,13 +76,13 @@
       <button class="popup__close-button popup__close-button-image"></button>
       <section class="popup__content">
         <img class="popup__image">
-        <p class="popup__paragraph"></p>
+        <p class="popup__paragraph"></p> 
       </section>
     </div>
   </div>
   <template id="template">
     <div class="element">
-      <img class="element__img" alt="изображдение" />
+      <img class="element__img" alt="изображение" />
       <div class="element__item">
         <h2 class="element__title"></h2>
         <button class="element__button"></button>
@@ -90,8 +90,8 @@
       </div>
     </div>
   </template>
-  <script src="./scripts/validate.js"></script>
-  <script src="./scripts/index.js"></script>
+  <script type="module" src="./scripts/index.js"></script>
+  <script type="module" src="./scripts/Card.js"></script>
+  <script type="module" src="./scripts/FormValidator.js"></script>
 </body>
-
 </html>
