--- a/src/index.html
+++ b/src/index.html
@@ -12,16 +12,15 @@
 <body class="body">
   <div class="page">
     <header class="header">
-      <a href="index.html" class="header__link"><img src="<%=require('./images/header__logo.svg')%>" alt="логотип проекта Место"
-          class="header__logo" /></a>
+      <a href="index.html" class="header__link"><img src="<%=require('./images/header__logo.svg')%>" alt="логотип проекта Место" class="header__logo" /></a>
     </header>
     <main class="main">
       <section class="profile">
-        <img src="<%=require('./images/profile__avatar.svg')%>" class="profile__image" alt="Аватар профиля" />
+        <img  class="profile__image" alt="Аватар профиля" />
         <div class="profile__info">
-          <h1 class="profile__title">Жак-Ив Кусто</h1>
+          <h1 class="profile__title"></h1>
           <button class="profile__edit-button"></button>
-          <p class="profile__paragraph">Исследователь океана</p>
+          <p class="profile__paragraph"></p>
         </div>
         <button class="profile__add-button"></button>
       </section>
@@ -90,6 +89,6 @@
       </div>
     </div>
   </template>
-  <script type='module' src="./scripts/index.js"></script>
+  <script type="module" src="./scripts/index.js"></script>
 </body>
 </html>
