--- a/src/index.html
+++ b/src/index.html
@@ -12,15 +12,16 @@
 <body class="body">
   <div class="page">
     <header class="header">
-      <a href="index.html" class="header__link"><img src="<%=require('./images/header__logo.svg')%>" alt="логотип проекта Место" class="header__logo" /></a>
+      <a href="index.html" class="header__link"><img src="<%=require('./images/header__logo.svg')%>" alt="логотип проекта Место"
+          class="header__logo" /></a>
     </header>
     <main class="main">
       <section class="profile">
-        <img  class="profile__image" alt="Аватар профиля" />
+        <img src="<%=require('./images/profile__avatar.svg')%>" class="profile__image" alt="Аватар профиля" />
         <div class="profile__info">
-          <h1 class="profile__title"></h1>
+          <h1 class="profile__title">Жак-Ив Кусто</h1>
           <button class="profile__edit-button"></button>
-          <p class="profile__paragraph"></p>
+          <p class="profile__paragraph">Исследователь океана</p>
         </div>
         <button class="profile__add-button"></button>
       </section>
@@ -79,30 +80,16 @@
       </section>
     </div>
   </div>
-  <div class="popup popup__confirm">
-    <div class="popup__overlay"></div>
-    <div class="popup__container popup__container_confirm">
-      <button class="popup__close-button popup__close-button-image"></button>
-      <h3 class="popup__title popup__title-confirm">Вы уверены?</h3>
-      <button class="popup__submit-button popup__button-confirm"> 
-        <span class="popup__text-button ">Да</span>
-      </button>
-      
-    </div>
-  </div>
   <template id="template">
     <div class="element">
       <img class="element__img" alt="изображение" />
       <div class="element__item">
         <h2 class="element__title"></h2>
-        <div class="element__container">
         <button class="element__button"></button>
-        <p class="element__likes">0</p>
-      </div>
         <button class="element__trash-button"></button>
       </div>
     </div>
   </template>
-  <script type="module" src="./scripts/index.js"></script>
+  <script type='module' src="./scripts/index.js"></script>
 </body>
 </html>
