Готовы первые 2 задания

--- a/src/index.html
+++ b/src/index.html
@@ -9,15 +9,19 @@
   <link rel="stylesheet" href="./pages/index.css">
 </head>
 
+<!-- logoMesto src="<%=require('./images/header__logo.svg')%>" -->
+<!-- profileImage src="<%=require('./images/profile__avatar.svg')%>" -->
+
+
 <body class="body">
   <div class="page">
     <header class="header">
-      <a href="index.html" class="header__link"><img src="<%=require('./images/header__logo.svg')%>" alt="логотип проекта Место"
+      <a href="index.html" class="header__link"><img src="./images/header__logo.svg" alt="логотип проекта Место"
           class="header__logo" /></a>
     </header>
     <main class="main">
       <section class="profile">
-        <img src="<%=require('./images/profile__avatar.svg')%>" class="profile__image" alt="Аватар профиля" />
+        <img src="./images/profile__avatar.svg" class="profile__image" alt="Аватар профиля" />
         <div class="profile__info">
           <h1 class="profile__title">Жак-Ив Кусто</h1>
           <button class="profile__edit-button"></button>
