--- a/src/index.html
+++ b/src/index.html
@@ -23,9 +23,9 @@
       <section class="profile">
         <img src="./images/profile__avatar.svg" class="profile__image" alt="Аватар профиля" />
         <div class="profile__info">
-          <h1 class="profile__title">Жак-Ив Кусто</h1>
+          <h1 class="profile__title"></h1>
           <button class="profile__edit-button"></button>
-          <p class="profile__paragraph">Исследователь океана</p>
+          <p class="profile__paragraph"></p>
         </div>
         <button class="profile__add-button"></button>
       </section>
@@ -89,7 +89,10 @@
       <img class="element__img" alt="изображение" />
       <div class="element__item">
         <h2 class="element__title"></h2>
+        <div class="element__like-container">
         <button class="element__button"></button>
+        <p class="element__like"></p>
+        </div>
         <button class="element__trash-button"></button>
       </div>
     </div>
