--- a/src/index.html
+++ b/src/index.html
@@ -84,6 +84,16 @@
       </section>
     </div>
   </div>
+  <div class="popup popup_confirm">
+    <div class="popup__overlay"></div>
+    <div class="popup__container popup__container-confirm">
+    <button class="popup__close-button popup__close-button-image"></button>
+    <h3 class="popup__title popup__title-confirm">Вы уверены?</h3>
+    <button class="popup__submit-button popup__submit-confirm" >
+      <span class="popup__text-button">Да</span>
+    </button>
+    </div>
+  </div>
   <template id="template">
     <div class="element">
       <img class="element__img" alt="изображение" />
