код стал более лаконичным - все данные беруться из data

--- a/src/index.html
+++ b/src/index.html
@@ -61,10 +61,10 @@
       <section class="popup__content">
         <h3 class="popup__title">Новое место</h3>
         <form class="popup__form popup__form_add-image" id="addForm" novalidate>
-          <input type="text" name="imageTitle" class="popup__field popup__field_title-image" id="title" placeholder="Название"
+          <input type="text" name="name" class="popup__field popup__field_title-image" id="title" placeholder="Название"
             value="" minlength="2" maxlength="30" required/>
             <span class="title-error popup__field-error"></span>
-          <input type="url" name="imageLink" class="popup__field popup__field_image" id="url" placeholder="Ссылка на картинку"
+          <input type="url" name="link" class="popup__field popup__field_image" id="url" placeholder="Ссылка на картинку"
             value="" required/>
             <span class="url-error popup__field-error" id="url-error"></span>
       <button class="popup__submit-button popup__submit-button_add" >
