Проектная работа готова

--- a/src/index.html
+++ b/src/index.html
@@ -158,6 +158,8 @@
             id="avatarLink"
             placeholder="Ссылка на аватар"
             name="avatar"
+            value
+            required
           />
           <span
           class="avatarLink-error popup__field-error span-error"
