--- a/src/index.html
+++ b/src/index.html
@@ -5,18 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Проект Место</title>
-    <link rel="stylesheet" href="./pages/index.css" />
   </head>
-
-  <!-- logoMesto src="<%=require('./images/header__logo.svg')%>" -->
-  <!-- profileImage src="<%=require('./images/profile__avatar.svg')%>" -->
 
   <body class="body">
     <div class="page">
       <header class="header">
         <a href="index.html" class="header__link"
           ><img
-            src="./images/header__logo.svg"
+            src="<%=require('./images/header__logo.svg')%>"
             alt="логотип проекта Место"
             class="header__logo"
         /></a>
@@ -24,11 +20,8 @@
       <main class="main">
         <section class="profile">
           <div class="profile__image-container">
-          <img
-            class="profile__image"
-            alt="Аватар профиля"
-          />
-        </div>
+            <img class="profile__image" alt="Аватар профиля" />
+          </div>
           <div class="profile__info">
             <h1 class="profile__title"></h1>
             <button class="profile__edit-button"></button>
@@ -162,10 +155,12 @@
             required
           />
           <span
-          class="avatarLink-error popup__field-error span-error"
-          id="avatarLink-error"
-        ></span>
-          <button class="popup__submit-button popup__submit-button_change-avatar">
+            class="avatarLink-error popup__field-error span-error"
+            id="avatarLink-error"
+          ></span>
+          <button
+            class="popup__submit-button popup__submit-button_change-avatar"
+          >
             <span class="popup__text-button">Сохранить</span>
           </button>
         </form>
@@ -184,6 +179,5 @@
         </div>
       </div>
     </template>
-    <script type="module" src="./pages/index.js"></script>
   </body>
 </html>
