--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Проект Место</title>
+    <link rel="stylesheet" href="./pages/index.css">
   </head>
 
   <body class="body">
@@ -179,5 +180,6 @@
         </div>
       </div>
     </template>
+    <script type='module' src="./pages/index.js"></script>
   </body>
 </html>
